<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DatabaseActivity">

    <Button
        android:id="@+id/databaseGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databaseStorePicture" />

    <Button
        android:id="@+id/databaseSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databaseLoadPicture" />

    <EditText
        android:id="@+id/databaseEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/databasePhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/databasePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="48dp"
        android:autofillHints="phoneNumber"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/databaseStorePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databasePicture" />

    <Button
        android:id="@+id/databaseLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="16dp"
        android:text="@string/load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/databasePicture"
        android:layout_width="78dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal" />
</androidx.constraintlayout.widget.ConstraintLayout>