<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/item_button"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/follow"
        android:inset="0dp"
        app:icon="@drawable/baseline_person_add_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:theme="@style/Theme.MaterialComponents.Light" />

</RelativeLayout>